syntax = "proto3";

package auth;

service AuthGRPC {
    rpc Register (RegisterRequest) returns (RegisterResponse);
    rpc Login (LoginRequest) returns (LoginResponse);
    rpc ForgotPassword(ForgotPasswordRequest) returns (ForgotPasswordResponse);
    rpc ChangePassword(ChangePasswordRequest) returns (ChangePasswordResponse);
}
  
message Empty {}

message Auth {
    string id = 1;
    string password = 2;
    string email = 3;
}

message RegisterRequest {
    string password = 1;
    string email = 2;
}

message RegisterResponse {
    string message = 1;
}

message LoginRequest {
    string password = 1;
    string email = 2;
}

message LoginResponse {
    string message = 1;
    string jwt = 2;
}

message ForgotPasswordRequest {
    string email = 1;
}

message ForgotPasswordResponse {
    string message = 1;
}

message ChangePasswordRequest {
    string email = 1;
    string oldPassword = 2;
    string newPassword = 3;
}

message ChangePasswordResponse {
    string message =1;
}
